--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "@types/three": "^0.92.23",
+    "ts-node": "^7.0.1",
     "typescript": "^3.0.3"
   }
 }
